<resources>
    <string name="app_name">PoolProApp</string>
    <string name="title_home">Home</string>
    <string name="title_tips">Tips</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello. Blank Fragment.</string>
    <string name="remove_a_pool">Remove Pool</string>
    <string name="add_a_pool">Add a Pool</string>
    <string name="name_hint">Example: Rabat Pool</string>
    <string name="capacity_hint">Example: 50000</string>
    <string name="add_pool">Add Pool</string>
    <string name="name_label">Pool Name</string>
    <string name="capacity_label">Total Pool Capacity (litres)</string>
    <string name="refill_notifications_settings">Refill Notifications Settings</string>
    <string name="calculate_acidity">Calculate Acidity</string>
    <string name="calculate_chlorine">Calculate Chlorine</string>
    <string name="request_water">Request Water</string>
    <string name="tip_prompt">Just a Pool tip on your journey to becoming a PoolPro.</string>
    <string name="pool_capacity">Pool Capacity</string>
    <string name="pool_name">Pool Name</string>
    <string name="current_chlorine_level">Select Current Chlorine Level (ppm)</string>
    <string name="desired_chlorine_level">Select Desired Chlorine Level (ppm)</string>
    <string name="suggested_amount_of_chlorine">Suggested amount of chlorine to add</string>
    <string name="current_acidity_level">Select Current Acidity Level (ph)</string>
    <string name="desired_acidity_level">Select Desired Acidity Level (ph)</string>
    <string name="suggested_amount_of_acid">Suggested amount of acid to add</string>
    <string name="add_supplier_email">Add Supplier Email</string>
    <string name="send_email">Send Email</string>
    <string name="amount_of_litres_to_request">Amount of litres to request</string>
    <string name="refill_explanation">Here there would be an option to toggle notifications and other settings.</string>
    <string name="full_name_of_pool_owner">Full Name of Pool Owner</string>
    <string name="example_owner">Example: Neville Grech</string>
    <string name="phone_number_of_pool_owner">Phone Number of Pool Owner</string>
    <string name="phone_example">Example: 79123456</string>
    <string name="example_email">Example: neville.grech.22@um.edu.mt</string>
    <string name="email_of_supplier">Email of Supplier</string>
    <string name="send_email_to">Send email to</string>
    <string-array name="litre_array">
        <item>15000</item>
        <item>20000</item>
        <item>25000</item>
        <item>30000</item>
    </string-array>
</resources>