<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capacity_label"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/capacity_hint"
            android:inputType="numberDecimal"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name_of_pool_owner"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_owner"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_of_pool_owner"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_example"
            android:inputType="number"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:layout_marginBottom="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_pool" />

    </LinearLayout>

</ScrollView>
