<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.request.RequestFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name_of_pool_owner"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/owner_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="0"
        android:inputType="none"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:layout_marginBottom="16dp"
        android:enabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_of_pool_owner"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="0"
        android:inputType="none"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:layout_marginBottom="16dp"
        android:enabled="false" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <!-- Dividing Line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginBottom="16dp" />

    <!-- Space after the dividing line -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_of_litres_to_request"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/litre_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email_to"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/email_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal">

        <Button
            android:id="@+id/add_supplier_email_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/add_supplier_email"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/send_email_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/green"
            android:text="Make request to selected email" />
    </LinearLayout>

</LinearLayout>
