<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="match_parent">
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.chlorine.ChlorineFragment">

        <!-- Add TextView for pool name -->
        <TextView
            android:id="@+id/pool_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/pool_name"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="2dp"
            android:background="@color/grey" />





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_gravity="top"
            android:layout_marginTop="64dp">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_acidity_level"
                android:textSize="16sp"
                android:layout_marginBottom="4dp" />

            <Spinner
                android:id="@+id/acidity_level_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desired_acidity_level"
                android:textSize="16sp"
                android:layout_marginBottom="4dp" />

            <Spinner
                android:id="@+id/desired_acidity_level_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="16dp"/>

            <!-- Space before the dividing line -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <!-- Dividing Line -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_marginBottom="16dp" />

            <!-- Space after the dividing line -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suggested_amount_of_acid"
                android:textSize="16sp"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/suggested_ml"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="0"
                android:inputType="none"
                android:background="@drawable/edit_text_background"
                android:padding="10dp"
                android:layout_marginBottom="16dp"
                android:focusable="false"
                android:cursorVisible="false"
                android:longClickable="false" />

        </LinearLayout>

    </FrameLayout>
</ScrollView>